# CGAME

./: CMakeLists.txt  blob.c  blob.h  enemy.c  enemy.h  engine.c  engine.h  game.c  game.h  grid.c  grid.h  player.c  player.h  render.c  render.h  shader.c  shader.h
shaders/: circle.frag  circle_player.frag  quad.frag  quad.vert
